Fixed small clipping issue with Leaderboard

--- a/React.JS/src/components/Components.css
+++ b/React.JS/src/components/Components.css
@@ -327,7 +327,9 @@
   overflow-x: visible;
   padding-right: 5px;
   padding-left: 5px;
+  padding-top: 5px;
   margin-left: -5px;
+  margin-top: -5px;
 }
 
 .leaderboard-entries::-webkit-scrollbar {
